--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,35 @@
+# MySQL
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
+spring.datasource.username=root
+spring.datasource.password=password
 
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
+
+spring.datasource.hikari.maximum-pool-size=25
+
+#spring.datasource.testWhileIdle = true
+#spring.datasource.timeBetweenEvictionRunsMillis = 60000
+#spring.datasource.validationQuery = SELECT 1
+
+#flyway
+#flyway.baseline-on-migrate=true
+#flyway.url: jdbc:mysql://remotemysql.com:3306/VyGtEttOCS
+#flyway.user: VyGtEttOCS
+#flyway.password: 8vh7b9fLeE
+
+# exibe os comandos SQL
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.type=trace
+
+app.security.basic.enabled=false
+
+#paginacao
+paginacao.qtd_por_pagina=25
+
+# JWT
+#jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+#jwt.expiration=604800
